# advent-of-code-2025

./: .gitignore  .pre-commit-config.yaml  README.md  generate_graph.py  init_remarks.py  pyproject.toml
.opencode/command/: tweet.md
day1/: REMARKS.md  safe_cracker.py
day10/: REMARKS.md  button_presses.py  demo_input.txt
day11/: REMARKS.md  cable_paths.py
day12/: REMARKS.md  present_packing.py
day2/: REMARKS.md  invalid_ids.py
day3/: REMARKS.md  joltage.py
day4/: REMARKS.md  paper_rolls.py
day5/: REMARKS.md  fresh_food.py
day6/: REMARKS.md  math_homework.py
day7/: REMARKS.md  teleportation.py
day8/: REMARKS.md  junction_boxes.py
day9/: REMARKS.md  tiles.py
